footer alignment fixed

--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -5,7 +5,6 @@
 .content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 .footerContent {
     background-color: #001f2b;
